--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>ASHLEY'S WEBSITE</title>
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
-    </div>
+      <nav>
+
+      </nav>
+
+      <main>
+<!-- Sidebar section -->
+  <div class="sidebar">
+
+  </div>
+
+  <!-- Content section -->
+  <div class="content">
+<h2>Ashley's life</h2>
+<p>I dont know what to put</p>
+  </div>
+      </main>
+      <div id="interests">
+<h3>intrests</h3>
+<ul>
+<li>going to the gym</li>
+<li>taking naps</li>
+<li>baking</li>
+</ul>
+</div>
+ </div>
   </body>
 </html>
