add index.html and css files

--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      <nav>
-
-      </nav>
+      <nav></nav>
 
       <main>
-<!-- Sidebar section -->
-  <div class="sidebar">
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://gizmodo.com/app/uploads/2025/05/Hot-Toys-Jar-Jar-Binks.jpg"
+          />
+        </div>
 
-  </div>
-
-  <!-- Content section -->
-  <div class="content">
-<h2>Ashley's life</h2>
-<p>I dont know what to put</p>
-  </div>
+        <!-- Content section -->
+        <div class="content">
+          <h2>Ashley's life</h2>
+          <p>I dont know what to put</p>
+        </div>
       </main>
       <div id="interests">
-<h3>intrests</h3>
-<ul>
-<li>going to the gym</li>
-<li>taking naps</li>
-<li>baking</li>
-</ul>
-</div>
- </div>
+        <h3>intrests</h3>
+        <ul>
+          <li>going to the gym</li>
+          <li>taking naps</li>
+          <li>baking</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
