--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
   <head>
     <title>ASHLEY'S WEBSITE</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      <nav></nav>
+      <nav>
+        <h1>Ashley's amazing website </h1>
+        <ul id="nav-ul">
+<li class="nav-li">
+  <a href="index.html">Home</a>
+   
+</li>
+<li class="nav-li">
+  <a href="portfolio.html">Portfolio</a>
+</li>
+</ul>
+      </nav>
 
       <main>
         <!-- Sidebar section -->
