--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -71,17 +71,23 @@
         // TODO 2 - Variable declarations
         var positionX = 0;
         var points = 0;
+        var speed = 10;
         /**
          * This Function will be called 20 times/second.
          * Each time it is called, it should move the Box to a new location.
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-          positionX = positionX + 10; // Adds 10 to positionX
-          moveBoxTo(positionX)
-          points = points + 1; // Adds 1 to points
-          points++; // Increases points by 1
-          
+          positionX += speed;
+
+          if (positionX > boardWidth) {
+            speed *= -1;
+          }
+
+          if (positionX < 0) {
+            speed *= -1;
+          }
+          moveBoxTo(positionX);
         }
 
         /**
@@ -92,10 +98,11 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
-positionX = 0;
-changeBoxText(0);
+          positionX = 0;
+          points++;
+          speed = 3 * points + 10;
+          changeBoxText(points);
         }
-        
       })();
     </script>
   </body>
